fixed DAILY page layout on small screen

--- a/templates/siegeengine2/css/siegeengine.css
+++ b/templates/siegeengine2/css/siegeengine.css
@@ -744,4 +744,8 @@ div.banner-logo>a>img{
  #my_video_1 { margin-top: 30px;}
 }
 
+/* SMALL SCREEN LAYOUT FOR DAILY PAGE  */
 
+@media screen and (max-width: 940px){
+  iframe#blockrandom{ margin-top: 35px; }
+}
